pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: dtest 
spec:
  selector:
    matchLabels:
      app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          imagePullPolicy: "IfNotPresent"    
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume113
              mountPath: /pgadmin4/servers.json
              subPath: servers.json               
      volumes:
        - name: config-volume113
          configMap:
            name: pgadmin-conf
