pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: dtest
  labels:
    app: pgadmin
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /pgadmin4
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80             


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: pgadmin
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /pgadmin4
#         pathType: Prefix
#         backend:
#           service:
#             name: pgadmin
#             port:
#               number: 80
